--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,79 +7,70 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
+<div class="container ">
+  <main>
 
-  <div class="container">
-    <main>
-      <section class="main-nav">
-        <div class="main-nav-header purple">
-          <h1>spotify</h1>
-          <ol>
-            <li> <a href="#">hello</a> </li>
-            <li> <a href="#">hello</a> </li>
-            <li> <a href="#">hello</a> </li>
+    <section class="left-nav">
 
-          </ol>
+      <div class="top-logo">
+        <h1>logo</h1>
+
+      </div>
+      <div class="list font-big">
+      <ul>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+        <li><a href="#">hello</a>  </li>
+      </ul>
+
+      </div>
+      <div class="nav-footer">
+        <h1>john doe</h1>
+
+      </div>
+
+    </section>
+    <section class="main-content">
+      <div id="call-to-action">
+        <a href="#" class="btn"> upgrade</a>
+
+      </div>
+    <div class="testo font-big">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </div>
+
+    </section>
 
 
-        </div>
-        <div class="main-playlist red">
-          <ol>
-            <li><a href="">link</a></li>
-            <li><a href="">link</a></li>
-            <li><a href="">link</a></li>
-            <li><a href="">link</a></li>
-            <li><a href="">link</a></li>
-            <li><a href="">link</a></li>
-            <li><a href="">link</a></li>
-            <li><a href="">link</a></li>
-            <li><a href="">link</a></li>
-            <li><a href="">link</a></li>
-            <li><a href="">link</a></li>
-          </ol>
-        </div>
-        <div class="main-nav-footer purple">
-          <h2>secondo titolo</h2>
-          <h2>terzo titolo</h2>
-        </div>
-      </section>
-      <section class="main-content font-big">
 
+  </main>
+  <footer>
 
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit pariatur voluptas dolores iure magnam perferendis quos ipsam illum fugiat, aliquid doloribus, veritatis ab ratione consectetur debitis maiores esse officiis.
+  </footer>
 
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit pariatur voluptas dolores iure magnam perferendis quos ipsam illum fugiat, aliquid doloribus, veritatis ab ratione consectetur debitis maiores esse officiis.
-
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit pariatur voluptas dolores iure magnam perferendis quos ipsam illum fugiat, aliquid doloribus, veritatis ab ratione consectetur debitis maiores esse officiis.
-
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit pariatur voluptas dolores iure magnam perferendis quos ipsam illum fugiat, aliquid doloribus, veritatis ab ratione consectetur debitis maiores esse officiis.
-
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit pariatur voluptas dolores iure magnam perferendis quos ipsam illum fugiat, aliquid doloribus, veritatis ab ratione consectetur debitis maiores esse officiis.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit pariatur voluptas dolores iure magnam perferendis quos ipsam illum fugiat, aliquid doloribus, veritatis ab ratione consectetur debitis maiores esse officiis.
-
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit pariatur voluptas dolores iure magnam perferendis quos ipsam illum fugiat, aliquid doloribus, veritatis ab ratione consectetur debitis maiores esse officiis.
-
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit pariatur voluptas dolores iure magnam perferendis quos ipsam illum fugiat, aliquid doloribus, veritatis ab ratione consectetur debitis maiores esse officiis.
-
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit pariatur voluptas dolores iure magnam perferendis quos ipsam illum fugiat, aliquid doloribus, veritatis ab ratione consectetur debitis maiores esse officiis.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit pariatur voluptas dolores iure magnam perferendis quos ipsam illum fugiat, aliquid doloribus, veritatis ab ratione consectetur debitis maiores esse officiis.
-
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit pariatur voluptas dolores iure magnam perferendis quos ipsam illum fugiat, aliquid doloribus, veritatis ab ratione consectetur debitis maiores esse officiis.
-
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit pariatur voluptas dolores iure magnam perferendis quos ipsam illum fugiat, aliquid doloribus, veritatis ab ratione consectetur debitis maiores esse officiis.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit pariatur voluptas dolores iure magnam perferendis quos ipsam illum fugiat, aliquid doloribus, veritatis ab ratione consectetur debitis maiores esse officiis.
-
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit pariatur voluptas dolores iure magnam perferendis quos ipsam illum fugiat, aliquid doloribus, veritatis ab ratione consectetur debitis maiores esse officiis.
-
-      </section>
-
-    </main>
-    <footer>
-
-    </footer>
-  </div>
+</div>
 
 </body>
-
 </html>
