--- a/index.html
+++ b/index.html
@@ -13,74 +13,62 @@
 <body>
   <div class="container ">
     <main>
-
       <section class="left-nav">
+      <div class="logo">
+        <h1>hello</h1>
+      </div>
 
-        <div class="top-logo">
-          <img class="spotify" src="img 2/logo.svg" alt="spot-logo">
+      <div class="list">
+        <ul>
+          <li><a href="#">hello</a> </li>
+          <li><a href="#">hello</a> </li>
+          <li><a href="#">hello</a> </li>
+
+        </ul>
+
+      </div>
+
+      <div class="play-list">
+        <ul>
+          <li><a href="#">hello</a> </li>
+          <li><a href="#">hello</a> </li>
+          <li><a href="#">hello</a> </li>
+          <li><a href="#">hello</a> </li>
+          <li><a href="#">hello</a> </li>
+          <li><a href="#">hello</a> </li>
+          <li><a href="#">hello</a> </li>
+          <li><a href="#">hello</a> </li>
+          <li><a href="#">hello</a> </li>
+          <li><a href="#">hello</a> </li>
+          <li><a href="#">hello</a> </li>
+          <li><a href="#">hello</a> </li>
+        </ul>
 
 
-        </div>
-        <div class="list ">
-          <ul>
-            <li class="home"><a href="#"> <i class="fas fa-home"></i> Home</a> </li>
-            <li><a href="#"> <i class="fas fa-search"></i> Cerca</a> </li>
-            <li><a href="#"> <i class="fas fa-user-slash"></i> La tua liberia</a> </li>
+      </div>
 
-              <li class="play"><a href="#"> <strong>PLAYLIST</strong></a></li>
-              <li><a href="#"><i class="fas fa-archive"></i> crea Playlist</a> </li>
-              <li><a href="#">Nome Playlist</a> </li>
-              <li><a href="#">Nome Playlist</a> </li>
-              <li><a href="#">Nome Playlist</a> </li>
-              <li><a href="#">Nome Playlist</a> </li>
-              <li><a href="#">Nome Playlist</a> </li>
-              <li><a href="#">Nome Playlist</a> </li>
-              <li><a href="#">Nome Playlist</a> </li>
-              <li><a href="#"></a> </li>
+      <div class="nav-footer">
+        <ul>
+          <li> <a href="#">hello</a> </li>
+          <li> <a href="#">hello</a> </li>
+        </ul>
 
-            </ul>
-
-
-
-        </div>
-        <div class="nav-footer">
-
-          <div class="">
-
-            <h2><i class="fas fa-arrow-circle-down"></i> installa app</h2>
-            <hr>
-
-            <h2><i class="fas fa-user-circle"></i>John Doe</h2>
-
-          </div>
-
-        </div>
+      </div>
 
       </section>
-      <section class="main-content">
+      <section class="main-content font-big">
+
         <div id="call-to-action">
-          <a href="#" class="btn"> EFFETUA L'UPGRADE</a>
+          <a href="#" class="btn">effetua l'upgrade</a>
 
         </div>
-        <div class="testo font-big">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
       </section>
-
 
 
     </main>
