--- a/index.html
+++ b/index.html
@@ -15,43 +15,48 @@
     <main>
       <section class="left-nav">
       <div class="logo">
-        <h1>hello</h1>
+        <img class="spotify" src="img 2/logo.svg" alt="spotify">
       </div>
 
       <div class="list">
         <ul>
-          <li><a href="#">hello</a> </li>
-          <li><a href="#">hello</a> </li>
-          <li><a href="#">hello</a> </li>
+          <li><a href="#" class="white"><i class="fas fa-house-damage"></i>  home</a> </li>
+          <li><a href="#" class="grey"><i class="fas fa-search"></i> Cerca</a> </li>
+          <li><a href="#" class="grey"> <i class="fas fa-head-side-cough-slash"></i> La tua liberia</a> </li>
 
         </ul>
 
       </div>
 
       <div class="play-list">
-        <ul>
-          <li><a href="#">hello</a> </li>
-          <li><a href="#">hello</a> </li>
-          <li><a href="#">hello</a> </li>
-          <li><a href="#">hello</a> </li>
-          <li><a href="#">hello</a> </li>
-          <li><a href="#">hello</a> </li>
-          <li><a href="#">hello</a> </li>
-          <li><a href="#">hello</a> </li>
-          <li><a href="#">hello</a> </li>
-          <li><a href="#">hello</a> </li>
-          <li><a href="#">hello</a> </li>
-          <li><a href="#">hello</a> </li>
+        <h4 class="white">PLAYLIST</h4>
+        <span class="grey"><i class="fas fa-th"></i>   Crea Playlist</span>
+
+        <ul class="">
+          <li class="grey"><a href="#">Nome Playlist</a> </li>
+          <li class="grey"><a href="#">Nome Playlist</a> </li>
+          <li class="grey"><a href="#">Nome Playlist</a> </li>
+          <li class="grey"><a href="#">Nome Playlist</a> </li>
+          <li class="grey"><a href="#">Nome Playlist</a> </li>
+          <li class="grey"><a href="#">Nome Playlist</a> </li>
+          <li class="grey"><a href="#">Nome Playlist</a> </li>
+
+
+
         </ul>
 
 
       </div>
 
       <div class="nav-footer">
-        <ul>
-          <li> <a href="#">hello</a> </li>
-          <li> <a href="#">hello</a> </li>
-        </ul>
+        <div class="name">
+          <ul>
+            <li > <a href="#"><i class="fas fa-arrow-circle-down"></i> installa app</a> </li>
+            <hr>
+            <li> <a href="#"><i class="fas fa-user-circle"></i> John Doe</a> </li>
+          </ul>
+        </div>
+
 
       </div>
 
