--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,600&family=Roboto:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,51 +16,51 @@
   <div class="container ">
     <main>
       <section class="left-nav">
-      <div class="logo">
-        <img class="spotify" src="img 2/logo.svg" alt="spotify">
-      </div>
-
-      <div class="list">
-        <ul>
-          <li><a href="#" class="white"><i class="fas fa-house-damage"></i>  home</a> </li>
-          <li><a href="#" class="grey"><i class="fas fa-search"></i> Cerca</a> </li>
-          <li><a href="#" class="grey"> <i class="fas fa-head-side-cough-slash"></i> La tua liberia</a> </li>
-
-        </ul>
-
-      </div>
-
-      <div class="play-list">
-        <h4 class="white">PLAYLIST</h4>
-        <span class="grey"><i class="fas fa-th"></i>   Crea Playlist</span>
-
-        <ul class="">
-          <li class="grey"><a href="#">Nome Playlist</a> </li>
-          <li class="grey"><a href="#">Nome Playlist</a> </li>
-          <li class="grey"><a href="#">Nome Playlist</a> </li>
-          <li class="grey"><a href="#">Nome Playlist</a> </li>
-          <li class="grey"><a href="#">Nome Playlist</a> </li>
-          <li class="grey"><a href="#">Nome Playlist</a> </li>
-          <li class="grey"><a href="#">Nome Playlist</a> </li>
-
-
-
-        </ul>
-
-
-      </div>
-
-      <div class="nav-footer">
-        <div class="name">
-          <ul>
-            <li > <a href="#"><i class="fas fa-arrow-circle-down"></i> installa app</a> </li>
-            <hr>
-            <li> <a href="#"><i class="fas fa-user-circle"></i> John Doe</a> </li>
-          </ul>
+        <div class="logo">
+          <img class="spotify" src="img 2/logo.svg" alt="spotify">
         </div>
 
+        <div class="list">
+          <ul>
+            <li><a href="#" class="white"><i class="fas fa-house-damage"></i> home</a> </li>
+            <li><a href="#" class="grey"><i class="fas fa-search"></i> Cerca</a> </li>
+            <li><a href="#" class="grey"> <i class="fas fa-head-side-cough-slash"></i> La tua liberia</a> </li>
 
-      </div>
+          </ul>
+
+        </div>
+
+        <div class="play-list">
+          <h4 class="white">PLAYLIST</h4>
+          <span class="grey"><i class="fas fa-th"></i> Crea Playlist</span>
+
+          <ul class="">
+            <li class="grey"><a href="#">Nome Playlist</a> </li>
+            <li class="grey"><a href="#">Nome Playlist</a> </li>
+            <li class="grey"><a href="#">Nome Playlist</a> </li>
+            <li class="grey"><a href="#">Nome Playlist</a> </li>
+            <li class="grey"><a href="#">Nome Playlist</a> </li>
+            <li class="grey"><a href="#">Nome Playlist</a> </li>
+            <li class="grey"><a href="#">Nome Playlist</a> </li>
+
+
+
+          </ul>
+
+
+        </div>
+
+        <div class="nav-footer">
+          <div class="name">
+            <ul>
+              <li> <a href="#"><i class="fas fa-arrow-circle-down"></i> installa app</a> </li>
+              <hr>
+              <li> <a href="#"><i class="fas fa-user-circle"></i> John Doe</a> </li>
+            </ul>
+          </div>
+
+
+        </div>
 
       </section>
       <section class="main-content font-big">
@@ -75,7 +77,7 @@
             <li> <a href="#"> classifiche</a> </li>
             <li> <a href="#"> generi e mood</a> </li>
             <li> <a href="#"> nuove uscite</a> </li>
-              <li> <a href="#"> scopri</a> </li>
+            <li> <a href="#"> scopri</a> </li>
           </ul>
 
         </div>
@@ -84,59 +86,82 @@
           <h3>Recently played</h3>
 
         </div>
-
+        <!-- albums -->
         <div id="albums">
+          <!-- heavy metal pic -->
           <div class="img1">
             <img class="imageheavy" src="img 2/metal_lifting.jpg" alt="h-metal">
 
-            <h5>Heavy Metal</h5>
-            <p>Subtitle</p>
+              <div class="title">
+                <p class="white">Heavy Metal</p>
+                <p class="grey">Subtitle</p>
+              </div>
 
           </div>
           <div class="img1">
             <img class="imageheavy" src="img 2/stranger.jpeg" alt="stranger">
 
-            <h5>Heavy Metal</h5>
-            <p>Subtitle</p>
+              <div class="title">
+                <p class="white">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</p>
+                <p class="grey">Kyle Dixon & Micheal Stein</p>
+              </div>
 
           </div>
           <div class="img1">
-            <img class="imageheavy" src="img 2/aquietplace.jpeg" alt="quiet-pl">
+            <img class="imageheavy" src="img 2/aquietplace.jpeg" alt="quiet">
 
-            <h5>Heavy Metal</h5>
-            <p>Subtitle</p>
-
-          </div>
-          <div class="img1">
-            <img class="imageheavy" src="img 2/metal_lifting.jpg" alt="h-metal">
-
-            <h5>Heavy Metal</h5>
-            <p>Subtitle</p>
+              <div class="title">
+                <p class="white">A quiet place</p>
+                <p class="grey">Subtitle</p>
+              </div>
 
           </div>
           <div class="img1">
-            <img class="imageheavy" src="img 2/metal_lifting.jpg" alt="h-metal">
+            <img class="imageheavy" src="img 2/split.jpeg" alt="split">
 
-            <h5>Heavy Metal</h5>
-            <p>Subtitle</p>
+              <div class="title">
+                <p class="white">Split</p>
+                <p class="grey">Subtitle</p>
+              </div>
 
           </div>
           <div class="img1">
-            <img class="imageheavy" src="img 2/metal_lifting.jpg" alt="h-metal">
+            <img class="imageheavy" src="img 2/cure.jpeg" alt="cure">
 
-            <h5>Heavy Metal</h5>
-            <p>Subtitle</p>
+              <div class="title">
+                <p class="white">A cure for wellness</p>
+                <p class="grey">Subtitle</p>
+              </div>
 
           </div>
+          <div class="img1">
+            <img class="imageheavy" src="img 2/sinister.jpeg" alt="h-metal">
+
+              <div class="title">
+                <p class="white">Sinister</p>
+                <p class="grey">Subtitle</p>
+              </div>
+
+          </div>
+
+
+
 
 
 
         </div>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+        <!-- album pic -->
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
       </section>
 
