responsive section below

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,600&family=Roboto:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,600&family=Roboto:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -92,55 +92,55 @@
           <div class="img1">
             <img class="imageheavy" src="img 2/metal_lifting.jpg" alt="h-metal">
 
-              <div class="title">
-                <p class="white">Heavy Metal</p>
-                <p class="grey">Subtitle</p>
-              </div>
+            <div class="title">
+              <p class="white">Heavy Metal</p>
+              <p class="grey">Subtitle</p>
+            </div>
 
           </div>
           <div class="img1">
             <img class="imageheavy" src="img 2/stranger.jpeg" alt="stranger">
 
-              <div class="title">
-                <p class="white">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</p>
-                <p class="grey">Kyle Dixon & Micheal Stein</p>
-              </div>
+            <div class="title">
+              <p class="white">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</p>
+              <p class="grey">Kyle Dixon & Micheal Stein</p>
+            </div>
 
           </div>
           <div class="img1">
             <img class="imageheavy" src="img 2/aquietplace.jpeg" alt="quiet">
 
-              <div class="title">
-                <p class="white">A quiet place</p>
-                <p class="grey">Subtitle</p>
-              </div>
+            <div class="title">
+              <p class="white">A quiet place</p>
+              <p class="grey">Subtitle</p>
+            </div>
 
           </div>
           <div class="img1">
             <img class="imageheavy" src="img 2/split.jpeg" alt="split">
 
-              <div class="title">
-                <p class="white">Split</p>
-                <p class="grey">Subtitle</p>
-              </div>
+            <div class="title">
+              <p class="white">Split</p>
+              <p class="grey">Subtitle</p>
+            </div>
 
           </div>
           <div class="img1">
             <img class="imageheavy" src="img 2/cure.jpeg" alt="cure">
 
-              <div class="title">
-                <p class="white">A cure for wellness</p>
-                <p class="grey">Subtitle</p>
-              </div>
+            <div class="title">
+              <p class="white">A cure for wellness</p>
+              <p class="grey">Subtitle</p>
+            </div>
 
           </div>
           <div class="img1">
             <img class="imageheavy" src="img 2/sinister.jpeg" alt="h-metal">
 
-              <div class="title">
-                <p class="white">Sinister</p>
-                <p class="grey">Subtitle</p>
-              </div>
+            <div class="title">
+              <p class="white">Sinister</p>
+              <p class="grey">Subtitle</p>
+            </div>
 
           </div>
 
@@ -150,6 +150,32 @@
 
 
         </div>
+        <div class="lil-albi">
+
+          <h5 class="white">Creato per john Doe</h5>
+          <p class="tito grey">Piu ascolti.piu accurati saranno i suggerimenti</p>
+
+        </div>
+        <section class="sect1">
+
+          <div class="photos">
+            <ul>
+              <li><img class="photo1" src="img 2/radar.jpeg" alt="radar"> </li>
+              <li class="radar">Release Radar</li>
+            </ul>
+
+          </div>
+          <div class="photos">
+            <ul>
+              <li><img class="photo1" src="img 2/mixdaily.jpeg" alt="mixdaily"> </li>
+              <li class="radar">Daily Mix</li>
+            </ul>
+
+          </div>
+
+
+
+        </section>
 
         <!-- album pic -->
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
