--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
             </ul>
           </div>
 
-
         </div>
 
       </section>
@@ -144,11 +143,6 @@
 
           </div>
 
-
-
-
-
-
         </div>
         <div class="lil-albi">
 
@@ -173,21 +167,33 @@
 
           </div>
 
+        </section>
+        <div class="lil-albi">
 
+          <h5 class="white">Artisti piu populari</h5>
+          <p class="tito grey">Piu ascolti.piu accurati saranno i suggerimenti</p>
+
+        </div>
+        <section class="sect2">
+          <div class="rounded">
+            <ul>
+              <li><img class="photo1 b-r" src="img 2/youg.jpeg" alt="youg"> </li>
+              <li class="sma09 white">lana del ray</li>
+            </ul>
+
+          </div>
+          <div class="rounded">
+            <ul>
+              <li><img class="photo1 b-r" src="img 2/einaudi.jpeg" alt="man-pic"> </li>
+              <li class="sma09 white">Ludovico Enuedi</li>
+            </ul>
+
+          </div>
 
         </section>
 
         <!-- album pic -->
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
 
       </section>
 
