--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
       <section class="left-nav">
         <div class="logo">
           <img class="spotify" src="img 2/logo.svg" alt="spotify">
+          <img class="rambo hidden" src="img 2/logo-small.svg" alt="logo-1">
+
         </div>
 
         <div class="list">
           <ul>
-            <li><a href="#" class="white"><i class="fas fa-house-damage"></i> home</a> </li>
-            <li><a href="#" class="grey"><i class="fas fa-search"></i> Cerca</a> </li>
-            <li><a href="#" class="grey"> <i class="fas fa-head-side-cough-slash"></i> La tua liberia</a> </li>
+            <li>  <a href="#" class="white"><i class="fas fa-house-damage"></i> <span>home</span></a> </li>
+            <li><a href="#" class="grey"><i class="fas fa-search"></i> <span>cerca</span></a> </li>
+            <li><a href="#" class="grey"> <i class="fas fa-head-side-cough-slash"></i> <span>La tua liberia</span></a> </li>
 
           </ul>
 
@@ -53,9 +55,9 @@
         <div class="nav-footer">
           <div class="name">
             <ul>
-              <li> <a href="#"><i class="fas fa-arrow-circle-down"></i> installa app</a> </li>
+              <li> <a href="#"><i class=" fas fa-arrow-circle-down"></i> <span class="grey">installa app</span></a> </li>
               <hr>
-              <li> <a href="#"><i class="fas fa-user-circle"></i> John Doe</a> </li>
+              <li> <a href="#"><i class="fas fa-user-circle"></i> <span>John Doe</span></a> </li>
             </ul>
           </div>
 
@@ -68,10 +70,10 @@
           <a href="#" class="btn">effetua l'upgrade</a>
 
         </div>
-
+<!-- inizio nav list -->
         <div class="nav-list">
           <ul>
-            <li> <a href="#">in evidenza</a> </li>
+            <li class=""> <a href="#"> <span>in evidenza</span></a> </li>
             <li> <a href="#">podcast</a> </li>
             <li> <a href="#"> classifiche</a> </li>
             <li> <a href="#"> generi e mood</a> </li>
@@ -80,6 +82,7 @@
           </ul>
 
         </div>
+        <!-- finisci nav list -->
 
         <div class="recent">
           <h3>Recently played</h3>
