--- a/index.html
+++ b/index.html
@@ -92,7 +92,12 @@
         <div id="albums">
           <!-- heavy metal pic -->
           <div class="img1">
-            <img class="imageheavy" src="img 2/metal_lifting.jpg" alt="h-metal">
+
+
+
+            <img class="imageheavy picc" src="img 2/metal_lifting.jpg" alt="h-metal">
+            <a href="#"> </a>
+
 
             <div class="title">
               <p class="white">Heavy Metal</p>
@@ -203,6 +208,68 @@
 
     </main>
     <footer>
+      <div class="one">
+        <div class="picky">
+          <img class="foot-pic" src="img 2/player_left.jpg" alt="one-f">
+        </div>
+
+
+         <div class="mid-sck">
+           <p class="white">Sinister</p>
+           <p class="white">Branco Nome</p>
+         </div>
+
+         <div class="ico">
+           <ul>
+             <li class="grey"> <a  href="#"><i class=" far fa-heart"></i></a> </li>
+             <li> <a href="#"><i class=" far fa-folder"></i></a> </li>
+           </ul>
+
+         </div>
+
+
+      </div>
+      <div class="two">
+        <div class="player">
+          <ul>
+            <li><a href="#"> <span><i class=" fas fa-random"></i></span> </a> </li>
+            <li><a href="#"><span><i class=" fas fa-step-backward"></i></span></a> </li>
+            <li><a href="#"><span><i class="  far fa-play-circle"></i></span></a> </li>
+            <li><a href="#"><span><i class=" fas fa-step-forward"></i></span></a> </li>
+            <li><a href="#"><span><i class=" fas fa-redo-alt"></i></span></a> </li>
+
+          </ul>
+          <div class="length">
+            <ul>
+              <li> <a href="#"> <span class="white"> 0:25 </span> </a> </li>
+              <li> <a href="#"></a> </li>
+              <li> <a href="#"><span class="white">3:59</span></a> </li>
+
+            </ul>
+
+          </div>
+
+        </div>
+
+
+
+      </div>
+      <div class="three">
+
+
+        <div class="lib">
+          <ul>
+            <li><a href="#"> <span><i class=" fas fa-list"></i></span> </a> </li>
+            <li><a href="#"><span><i class=" fas fa-desktop"></i></span> </a> </li>
+            <li><a href="#"><span><i class=" fas fa-volume-up"></i></span> </a> </li>
+            <li><a href="#"><span></span> </a> </li>
+
+
+          </ul>
+
+        </div>
+
+      </div>
 
     </footer>
 
